<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="92dp">

            <ImageView
                android:id="@+id/imageViewCover"
                android:layout_width="92dp"
                android:layout_height="92dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:contentDescription="@string/image_desc" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:text="@string/album_title"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageViewCover"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="40dp"
                android:gravity="end"
                android:text="@string/album_type"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewDate" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="4dp"
                android:gravity="start"
                android:text="@string/album_release"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewCover" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>