<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="92dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/artist_name"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewCountry"
                android:layout_width="265dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/artist_country"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonDel"
                app:layout_constraintStart_toEndOf="@+id/imageViewCountry"
                app:layout_constraintTop_toBottomOf="@+id/textViewName" />

            <ImageView
                android:id="@+id/imageViewCountry"
                android:layout_width="39dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="9dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_baseline_image_not_supported_24" />

            <ImageButton
                android:id="@+id/buttonDel"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@string/deletebtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>